--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>mWebpack tools</title>
-</head>
-<body>
-<img src="./images/turkey.jpeg">
-
-</body>
+  </head>
+  
+  <body>
+    <img src="./images/turkey.jpeg" />
+    <p class="button-red">Welcome</p>
+    <p class="button-blue">Welcome</p>
+  </body>
 </html>
