--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>mWebpack tools</title>
+    <title>Webpack Tools</title>
   </head>
   
   <body>
+    <div id="app">
+    </div>
     <img src="./images/turkey.jpeg" />
     <p class="button-red">Welcome</p>
     <p class="button-blue">Welcome</p>
